fix(sidebar): nested category spacing

--- a/src/css/sidebar.scss
+++ b/src/css/sidebar.scss
@@ -11,7 +11,9 @@
   border: 1px solid var(--bt-default-border-color);
 }
 
-.theme-doc-sidebar-item-category ul li:last-of-type {
+.theme-doc-sidebar-item-category-level-1:not(:last-of-type)
+  > ul
+  > li:last-of-type {
   padding-bottom: 24px;
 }
 
